kubernetes/projects/apps/yonder/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: yonder
spec:
  selector:
    app: web
  ports:
  - name: http
    port: 80
    targetPort: http
